--- a/pkgs/Arch/PKGBUILD
+++ b/pkgs/Arch/PKGBUILD
@@ -10,9 +10,12 @@ license=('unknown')
 depends=(cdrtools squashfs-tools)
 source=("$srcurl/wbb"
 	"$srcurl/Panwah.tar.gz")
-Sha256sums=("126b634a29091aa8236222512d16e0b6be3683cea7b5300c8ca4c73c1dc9d320"	# wbb
+sha256sums=("126b634a29091aa8236222512d16e0b6be3683cea7b5300c8ca4c73c1dc9d320"	# wbb
 	    "4c52fc4df0f2842e6663da96812b805251685760589eda77d16bc07166f15ee0")	# Panwah.tar.gz
 
 package() {
-	cp wbb $pkgdir/usb/bin
+	mkdir -p $pkgdir/usr/bin
+	cp -v $srcdir/wbb $pkgdir/usr/bin
+	mkdir -p $pkgdir/usr/share/wbb
+	cp -rv $srcdir/Panwah $pkgdir/usr/share/wbb/
 }
